fixed overylay flicker bug and added video duration to props

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
 
 .video {
     border-radius: 5px;
-    cursor: pointer;
+    cursor: default;
     transition: 0.3s;
 }
 
@@ -25,6 +25,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  cursor: default
 
 }
 
